replaced Basic plugin with GatherDir to prevent duplicate LICENSE file error message during dzil build

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2018
 
 version = 0.001
 
-[@Basic]
-[@Git]
-
+[GatherDir]
+exclude_match = Compress-Timeseries-*
 [AutoPrereqs]
+[@Git]
