rather use Dist::Zilla's Basic plugin and exclude any files in MANIFEST.SKIP; added Encoding directive

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,14 @@ copyright_year   = 2018
 
 version = 0.001
 
-[GatherDir]
-exclude_match = Compress-Timeseries-*
+[Encoding]
+encoding = bytes
+filename = t/ES_1.txt.bz2.orig
+filename = t/feed_file.txt.bz2.orig
+filename = t/ticks.txt.bz2.orig
+
+[@Basic]
+
 [AutoPrereqs]
+
 [@Git]
