--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 sudo: false
 language: perl
 perl:
-   - 'blead'
-   - '5.20'
-   - '5.18'
-   - '5.16'
-   - '5.14'
+   - '5.28'
+   - '5.22'
    - '5.12'
-   - '5.10'
+   - bleed
    - '5.8'
 matrix:
    allow_failures:
-      - perl: 'blead'
+      - perl: bleed
       - perl: '5.8'
    fast_finish: true
 before_install:
