--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,6 @@ filename = t/ticks.txt.bz2.orig
 
 [CPANFile]
 [TravisYML]
-perl_version = 5.28 5.22 5.12 -bleed -5.8
+perl_version = 5.22 5.12 -blead
 
 [@Git]
