trying out dzil TravisCI plugin

--- a/dist.ini
+++ b/dist.ini
@@ -14,10 +14,16 @@ filename = t/ticks.txt.bz2.orig
 
 [@Basic]
 
+[@Git]
+
 [AutoPrereqs]
 
 [CPANFile]
-[TravisYML]
-perl_version = 5.22 5.12
 
-[@Git]
+[TravisCI]
+perl_version = 5.22
+perl_version = 5.12
+requires = libgmp-dev
+extra_dep = Math::BigInt::GMP
+test_deps = 0
+coveralls = 1
