--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
-sudo: false
+---
+after_success:
+  - cover -report coveralls
+before_install:
+  - export HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
+  - 'export HARNESS_PERL_SWITCHES=-MDevel::Cover=-db,$TRAVIS_BUILD_DIR/cover_db'
+  - rm .travis.yml
+  - sudo apt-get install -qq libgmp-dev
+  - git config --global user.name "Dist Zilla Plugin TravisCI"
+  - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+install:
+  - cpanm  --quiet  --notest --skip-installed Dist::Zilla
+  - dzil authordeps | grep -ve '^\W' | xargs -n 5 -P 10 cpanm  --quiet   --notest  --skip-installed
+  - dzil listdeps | grep -ve '^\W' | cpanm  --quiet   --notest  --skip-installed
+  - cpanm  --quiet   --notest  Math::BigInt::GMP Devel::Cover::Report::Coveralls
 language: perl
 perl:
-   - '5.22'
-   - '5.12'
-matrix:
-   fast_finish: true
-before_install:
-   - git config --global user.name "TravisCI"
-   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
-install:
-   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
-   - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
-   - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | cpanm --verbose"
+  - '5.22'
+  - '5.12'
 script:
-   - dzil smoke --release --author
+  - dzil smoke --release --author
