using dzil cover as travis test script

--- a/dist.ini
+++ b/dist.ini
@@ -22,8 +22,8 @@ filename = t/ticks.txt.bz2.orig
 
 [TravisCI]
 perl_version = 5.22
-perl_version = 5.12
 requires = libgmp-dev
 extra_dep = Math::BigInt::GMP
 test_deps = 0
+script = dzil cover
 coveralls = 1
