--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,31 @@
----
-after_success:
-  - cover -report coveralls
-before_install:
-  - export HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
-  - 'export HARNESS_PERL_SWITCHES=-MDevel::Cover=-db,$TRAVIS_BUILD_DIR/cover_db'
-  - rm .travis.yml
-  - sudo apt-get install -qq libgmp-dev
-  - git config --global user.name "Dist Zilla Plugin TravisCI"
-  - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
-install:
-  - cpanm  --quiet  --notest --skip-installed Dist::Zilla
-  - dzil authordeps | grep -ve '^\W' | xargs -n 5 -P 10 cpanm  --quiet   --notest  --skip-installed
-  - dzil listdeps | grep -ve '^\W' | cpanm  --quiet   --notest  --skip-installed
-  - cpanm  --quiet   --notest  Math::BigInt::GMP Devel::Cover::Report::Coveralls
+sudo: false
 language: perl
 perl:
-  - '5.22'
+   - '5.22'
+matrix:
+   fast_finish: true
+   include:
+     - perl: '5.22'
+       env: COVERAGE=1
+before_install:
+   - git config --global user.name "TravisCI"
+   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+   - source ~/travis-perl-helpers/init
+   - build-perl
+   - perl -V
+install:
+   - cpan-install --coverage   # installs converage prereqs, if enabled
+   - cpanm --quiet --notest Devel::Cover::Report::Coveralls #send to coveralls
+   - cpanm --quiet --notest Dist::Zilla::App::Command::cover #make sure we can dzil cover
+   - cpanm --quiet --notest --skip-satisfied Dist::Zilla #unfortunately, we need a very new (6.0 or better) dzil, so no perl < 5.14
+   - cpanm --quiet --notest --skip-satisfied Test::Spec WWW::Mechanize Test::WWW::Selenium #Test::Pod::Coverage can be stupid
+   - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
+   - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
+before_script:
+  - coverage-setup
 script:
-  - dzil cover
+   - AUTHOR_TESTING=1 RELEASE_TESTING=1 dzil cover
+   - export BUILDDIR=`find .build -name cover_db`; cd `dirname $BUILDDIR`
+after_success:
+  - coverage-report
